WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138903
[EFL] Fix build failure since
r176363
.
https://bugs.webkit.org/show_bug.cgi?id=138903
Summary
[EFL] Fix build failure since r176363.
Sun-woo Nam
Reported
2014-11-19 17:52:08 PST
The parameter for animation on setTextIndicator() was removed on 'PageClient' class.
Attachments
Patch
(2.27 KB, patch)
2014-11-19 17:57 PST
,
Sun-woo Nam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sun-woo Nam
Comment 1
2014-11-19 17:57:36 PST
Created
attachment 241917
[details]
Patch
Gyuyoung Kim
Comment 2
2014-11-19 18:03:58 PST
Comment on
attachment 241917
[details]
Patch Clearing flags on attachment: 241917 Committed
r176375
: <
http://trac.webkit.org/changeset/176375
>
Gyuyoung Kim
Comment 3
2014-11-19 18:04:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug