[EFL] Fix build failure since r176363. https://bugs.webkit.org/show_bug.cgi?id=138903

Patch by Sun-woo Nam <sunny.nam@samsung.com> on 2014-11-19
Reviewed by Gyuyoung Kim.

The parameter for animation on setTextIndicator() was removed on 'PageClient' class.

* UIProcess/CoordinatedGraphics/WebView.cpp:
(WebKit::WebView::setTextIndicator):
* UIProcess/CoordinatedGraphics/WebView.h:

Canonical link: https://commits.webkit.org/156770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176375 268f45cc-cd09-0410-ab3c-d52691b4dbfc